@@ -30,7 +30,8 @@
         "pear-pear.php.net/mail_mime": "~1.10.0",
         "pear-pear.php.net/net_smtp": "~1.7.1",
         "pear-pear.php.net/crypt_gpg": "~1.6.0@beta",
-        "roundcube/net_sieve": "~1.5.0"
+        "roundcube/net_sieve": "~1.5.0",
+        "endroid/qrcode": "~1.6.5"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
